# VerifyClientWinFree

./: .gitignore  README.md
CppNaNa/: CppNaNa.sln  CppNaNa.vcxproj  CppNaNa.vcxproj.filters  aesnet.hpp  change.cpp  change.hpp  host.cpp  host.hpp  login.cpp  login.hpp  main.cpp  recharge.cpp  recharge.hpp  register.cpp  register.hpp
Python/: main.py  requirements.txt
Python/src/: aesnet.py  change.py  host.py  login.py  recharge.py  register.py
javascript/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
javascript/src/: aesnet.js  change.js  host.js  login.js  recharge.js  register.js
rust/: Cargo.toml
rust/src/: main.rs
rust/src/network/: change.rs  host.rs  login.rs  recharge.rs  register.rs
x86lib/: Cargo.toml  README.md
x86lib/src/: lib.rs
x86lib/src/network/: aesnet.rs  change.rs  host.rs  login.rs  recharge.rs  register.rs
