[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = "0.4.40"
eframe = "0.31.1"
futures = "0.3.31"
hex = "0.4.3"
once_cell = "1.21.3"
openssl = "0.10.72"
rand = "0.9.0"
reqwest = {version = "0.12.15", features = ["blocking","json"]}
serde_json = "1.0.140"
tokio = {version ="1.44.2", features = ["full"]}
