[profile.release]
debug = false   # 完全禁用调试信息
lto = true      # 启用链接时优化（减小体积）
codegen-units = 1 # 单线程代码生成（提升优化效果）
panic = "abort" # 替换默认panic处理为直接终止（减少生成代码）

[target.i686-pc-windows-msvc]
rustflags = [
    "-C", "link-args=/OPT:REF",   # 移除未引用函数
    "-C", "link-args=/OPT:ICF",    # 合并相同代码
    "-C", "link-args=/DEBUG:NONE", # 禁用生成PDB调试文件
]

[lib]
crate-type = ["cdylib"]

[package]
name = "x86lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = "0.4.40"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
libc = "0.2.171"
once_cell = "1.21.3"
openssl = "0.10.72"
rand = "0.9.0"
reqwest = {version = "0.12.15", features = ["blocking","json"]}
serde_json = "1.0.140"
tokio = {version ="1.44.2", features = ["full"]}
